# AssemblerTAAC

./: .gitignore  ArquivosCodigos.txt  CMakeLists.txt  CPU.cpp  Cache.cpp  Cache.h  DictionaryMneumonic.py  Executor.cpp  Executor.hpp  Inicializador.cpp  Inicializador.hpp  MDCcodificado.txt  Memory.cpp  Memory.hpp  OPCODES.esym.txt  OpenFile.cpp  OpenFile.hpp  TestesExemplo.cpp  main.cpp  testeInstructions.txt  testeProf.txt
src/: CPU.cpp  CPU.hpp  Cache.cpp  Cache.h  CacheLine.cpp  CacheLine.h  Controller.cpp  Controller.h  EmachineController.cpp  EmachineController.hpp  Fetcher.cpp  Fetcher.hpp  Helper.cpp  Helper.h  Loader.cpp  Loader.hpp  Memory.cpp  Memory.hpp  MemoryAddres.cpp  MemoryAddres.h  TestesExemplo.cpp  cacheLine.cpp  cacheLine.h  catch.hpp  main.cpp
src/CPU/: CPU.cpp  CPU.hpp
src/Cache/: Cache.cpp  Cache.h
src/CacheLine/: CacheLine.cpp  CacheLine.h
src/Controller/: Controller.cpp  Controller.h
src/Loader/: Loader.hpp
src/Memory/: Memory.cpp  Memory.hpp
src/MemoryAddres/: MemoryAddres.cpp  MemoryAddres.h  MemoryAddress.cpp  MemoryAddress.h
txtFiles/: ArquivosCodigos.txt  MDCInstructions.txt  OPCODES.esym.txt
